Lots of docstrings.

--- a/templates/default.html
+++ b/templates/default.html
@@ -11,8 +11,17 @@
   </head>
   <body>
     <div id="content" metal:fill-slot="content">
-	    <p>You have sent a request that this application is unable to
-	    process.</p>
+	    <p>
+      This is the SEAS web single-signon application, part of the
+      Academic Computing identity management suite.  To learn more
+      about identity management at SEAS, please visit the
+      <a href="http://spaces.seas.harvard.edu/display/IDENTITY/"
+        >Identity@SEAS</a> website.</p>
+      
+      <p>If you have questions
+      about this application, please contact Academic Computing at
+      <a href="mailto:achelp@seas.harvard.edu">achelp@seas.harvard.edu</a>.
+	    </p>
     </div>
   </body>
 </html>
