no longer use these templates

--- a/templates/default.html
+++ b/templates/default.html
@@ -7,7 +7,7 @@
   xml:lang="en"
   metal:use-macro="common/macros/page">
   <head>            
-    <title><metal:block metal:fill-slot="title">Unsupported</metal:block></title>
+    <title><metal:block metal:fill-slot="title">About SEAS SSO</metal:block></title>
   </head>
   <body>
     <div id="content" metal:fill-slot="content">
