--- a/templates/logout.html
+++ b/templates/logout.html
@@ -7,7 +7,7 @@
   xml:lang="en"
   metal:use-macro="common/macros/page">
 	<head>            
-    <title><metal:block meta:fill-slot="title">Logged out</metal:block></title>
+    <title><metal:block metal:fill-slot="title">Logged out</metal:block></title>
 	</head>
 	<body>
 
